# Dumbledore

./: .gitignore  Cargo.toml  LICENSE  README.md
dumbledore/: Cargo.toml
dumbledore/src/: world.rs
dumbledore/src/archetypes/: arche.rs  mod.rs
dumbledore/src/entities/: entity.rs
macros/: Cargo.toml
macros/src/: bundle.rs  lib.rs
src/: component_ref.rs  lib.rs  sets.rs  world.rs
src/archetypes/: arche.rs  mod.rs  set.rs
src/component/: mod.rs
src/entities/: entity.rs  entity_set.rs  mod.rs
test_game/: Cargo.toml
tests/: Cargo.toml
tests/src/: main.rs
