[package]
name = "dumbledore"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A ECS with async calls in mind"
readme = "README.md"
repository = "https://github.com/axolotl-rs/dumbledore"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
dumbledore-macro = { path = "macros", optional = true }
lockfree = { git = "https://github.com/wyatt-herkamp/tux_lockfree.git", package = "tux_lockfree" }
[dev-dependencies]
rand = "0.8.5"