[package]
name = "dumbledore-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = {version="1", features=["proc-macro"]}
syn = { version="1" ,features = ["extra-traits"]}